// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dependency-side-bar 1`] = `

<div>
  <div class="text-md flex flex-row items-center pt-6 font-medium h-[48px]">
    Dependencies
  </div>
  <gui-side-item
    item="GridItemData { @vltpkg/semver }"
    dependencies="true"
  >
  </gui-side-item>
  <gui-side-item
    item="GridItemData { abbrev }"
    dependencies="true"
  >
  </gui-side-item>
  <gui-side-item
    item="GridItemData { simple-output }"
    dependencies="true"
  >
  </gui-side-item>
</div>

`;

exports[`dependency-side-bar has both installed and uninstalled deps 1`] = `

<div>
  <div class="text-md flex flex-row items-center pt-6 font-medium h-[48px]">
    Dependencies
  </div>
  <gui-side-item
    item="GridItemData { @vltpkg/semver }"
    dependencies="true"
  >
  </gui-side-item>
  <gui-side-item
    item="GridItemData { abbrev }"
    dependencies="true"
  >
  </gui-side-item>
  <gui-side-item
    item="GridItemData { simple-output }"
    dependencies="true"
  >
  </gui-side-item>
  <div class="text-md flex flex-row items-center pt-6 font-medium">
    Uninstalled Dependencies
  </div>
  <gui-side-item
    item="GridItemData { @ruyadorno/redact }"
    dependencies="true"
  >
  </gui-side-item>
  <gui-side-item
    item="GridItemData { ntl }"
    dependencies="true"
  >
  </gui-side-item>
</div>

`;

exports[`dependency-side-bar has uninstalled deps only 1`] = `

<div>
  <div class="text-md flex flex-row items-center pt-6 font-medium h-[48px]">
    Dependencies
  </div>
  <div class="text-md flex flex-row items-center pt-6 font-medium">
    Uninstalled Dependencies
  </div>
  <gui-side-item
    item="GridItemData { @vltpkg/semver }"
    dependencies="true"
  >
  </gui-side-item>
  <gui-side-item
    item="GridItemData { abbrev }"
    dependencies="true"
  >
  </gui-side-item>
  <gui-side-item
    item="GridItemData { simple-output }"
    dependencies="true"
  >
  </gui-side-item>
</div>

`;

exports[`dependency-side-bar no items 1`] = `

<div>
  <div class="text-md flex flex-row items-center pt-6 font-medium h-[48px]">
    Dependencies
  </div>
</div>

`;
